<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoLPro</string>
    <string name="close_drawer">Cerrar</string>
    <string name="campeones_oferta">CAMPEONES EN OFERTA</string>
    <string name="action_image_refresh">Recargar imágenes</string>
    <string name="action_data_refresh">Recargar datos</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>


    <string-array name="titulosMenuIzquierda">
        <item>Inicio</item>
        <item>Campeones</item>
        <item>Objetos</item>
    </string-array>

    <string-array name="titulosCampeones">
        <item>General</item>
        <item>Historia</item>
        <item>Habilidades</item>
        <item>Aspectos</item>
    </string-array>

    <string-array name="titulosObjetos">
        <item>General</item>
        <item>Árbol</item>
    </string-array>

    <string-array name="tipoFuerza">
        <item>Mana</item>
        <item>Energy</item>
        <item>BloodWell</item>
        <item>fury</item>
        <item>Heat</item>
        <item>Shield</item>
        <item>Ferocity</item>
        <item>Wind</item>
        <item>Rage</item>
    </string-array>

    <string name="mapa_1">La Grieta del Invocador</string>
    <string name="mapa_8">La Cicatriz de Cristal</string>
    <string name="mapa_10">El Bosque Retorcido</string>
    <string name="mapa_12">El Abismo de los Lamentos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="actualizando">Actualizando datos</string>
    <string name="descargando_titulo">Descargando datos</string>
    <string name="descargando_campeones">Descargando campeones...</string>
    <string name="descargando_objetos">Descargando objetos...</string>
    <string name="descargando_act_campeones">Actualizando campeones...</string>
    <string name="descargando_act_objetos">Actualizando objetos...</string>
    <string name="descargando_campeones_gratuitos">Descargando gratuitos...</string>
    <string name="descargando_num_version">Comprobando versión...</string>

    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="nombre">Nombre</string>
    <string name="nick">Nick</string>
    <string name="vida">Vida:</string>
    <string name="danio_ataque">Daño de ataque:</string>
    <string name="vel_ataque">Velocidad de ataque:</string>
    <string name="vel_movimiento">Velocidad de movimiento:</string>
    <string name="res_magica">Resistencia mágica:</string>
    <string name="reg_vida">Regeneración de vida:</string>
    <string name="segundos">segundos</string>
    <string name="alcance_propio">Propio</string>

    <string name="bonus_spell_damage">de poder de habilidad</string>
    <string name="bonus_attack_damage">de daño de ataque</string>
    <string name="bonus_health">de vida</string>
    <string name="bonus_bonus_health">de vida adicional</string>
    <string name="bonus_mana">de maná máximo</string>
    <string name="bonus_armor">de armadura</string>
    <string name="bonus_bonus_armor">de armadura adicional</string>
    <string name="bonus_spell_block">de resistencia mágica</string>
    <string name="bonus_bonus_spell_block">de resistencia mágica adicional</string>

    <string name="no_from">Este objeto no proviene de ningún otro</string>
    <string name="no_into">Este objeto no forma parte de ningún otro</string>
    <string name="text_from">Está compuesto de:</string>
    <string name="text_into">Es parte de:</string>






    <string-array name="mp">
        <item>Maná:</item>
        <item>Energía:</item>
        <item>Sangre</item>
        <item>Furia</item>
        <item>Calor</item>
        <item>Escudo</item>
        <item>Ferocidad</item>
        <item>Viento</item>
        <item>Rabia</item>
    </string-array>
    <string-array name="regMP">
        <item>Regeneración de maná:</item>
        <item>Regeneración de energía:</item>
        <item>Regeneración de sangre:</item>
        <item>Regeneración de furia:</item>
        <item>Regeneración de calor:</item>
        <item>Regeneración de escudo:</item>
        <item>Regeneración de ferocidad:</item>
        <item>Regeneración de viento:</item>
        <item>Regeneración de rabia:</item>
    </string-array>

    <string name="alcance">Alcance:</string>
    <string name="enfriamiento">Enfriamiento:</string>
    <string name="reg_mana">Regeneración de mana:</string>
    <string name="armadura">Armadura:</string>
    <string name="campeones_gratuitos">CAMPEONES GRATUITOS</string>
    <string name="noticias">NOTICIAS</string>
    <string name="coste">Coste:</string>
    <string name="tienda">Está en la tienda:</string>
    <string name="coste_base">Coste base:</string>
    <string name="precio_venta">Precio venta:</string>
    <string name="required_champion">Campeones admitidos:</string>
    <string name="descripcion">Descripción:</string>
    <string name="no_internet">No hay conexión a Internet. Es necesaria para descargar los datos del juego.</string>
    <string name="fragment_not_found">No se ha encontrado el fragment %d</string>
    <string name="option_not_available">¡Opción no disponible!</string>

</resources>
