<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/spells_Imagen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left|top"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/spells_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spells_Imagen"
        android:layout_toRightOf="@+id/spells_Imagen"
        android:layout_marginLeft="15dp"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/spells_separador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spells_Imagen"
        android:layout_alignStart="@+id/spells_Imagen"
        android:layout_below="@+id/spells_Imagen"
        android:src="@drawable/separador" />

    <ImageView
        android:id="@+id/spells_imageCoste"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/spells_Imagen"
        android:layout_alignStart="@+id/spells_Imagen"
        android:layout_below="@+id/spells_separador"
        android:layout_marginTop="20dp"
        android:src="@drawable/coste" />

    <ImageView
        android:id="@+id/spells_imageAlcance"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/spells_imageCoste"
        android:layout_alignStart="@+id/spells_imageCoste"
        android:layout_below="@+id/spells_imageCoste"
        android:layout_marginTop="32dp"
        android:src="@drawable/alcance2" />

    <ImageView
        android:id="@+id/spells_imageEnfriamiento"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/spells_imageAlcance"
        android:layout_alignStart="@+id/spells_imageAlcance"
        android:layout_below="@+id/spells_imageAlcance"
        android:layout_marginTop="32dp"
        android:src="@drawable/enfriamiento2" />

    <TextView
        android:id="@+id/spells_textCoste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spells_imageCoste"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/spells_imageCoste"
        android:text="@string/coste"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spells_textAlcance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spells_imageAlcance"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/spells_imageAlcance"
        android:text="@string/alcance"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/spells_textEnfriamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spells_imageEnfriamiento"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/spells_imageEnfriamiento"
        android:text="@string/enfriamiento"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spells_coste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spells_textCoste"
        android:layout_alignStart="@+id/spells_textCoste"
        android:layout_below="@+id/spells_textCoste"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/spells_alcance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spells_textAlcance"
        android:layout_alignStart="@+id/spells_textAlcance"
        android:layout_below="@+id/spells_textAlcance"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/spells_enfriamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spells_textEnfriamiento"
        android:layout_alignStart="@+id/spells_textEnfriamiento"
        android:layout_below="@+id/spells_textEnfriamiento"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/spells_textDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spells_imageEnfriamiento"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/descripcion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spells_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spells_imageAlcance"
        android:layout_alignStart="@+id/spells_imageAlcance"
        android:layout_below="@+id/spells_textDescripcion"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/spells_separador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spells_Imagen"
        android:layout_alignStart="@+id/spells_Imagen"
        android:layout_below="@+id/spells_descripcion"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/barra20separador" />
</RelativeLayout>
